--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@ptomasroos/react-native-multi-slider",
   "version": "0.0.12",
   "description": "Android and iOS supported pure JS slider component with multiple markers for React Native",
-  "main": "MultiSlider.js",
+  "main": "./MultiSlider.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ptomasroos/react-native-multi-slider.git"
